top k element finished

--- a/1. NeetCode/A. Arrays & Hasing/5.[medium]top_k_elements.ipynb
+++ b/1. NeetCode/A. Arrays & Hasing/5.[medium]top_k_elements.ipynb
@@ -147,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nCONCEPT\\n    the brute force solution would be the most direct way to do this:\\n    count the freq of every number in the list, then sort those numbers by their freq, and then return the top k values\\n\\nIMPLEMENTATION\\n    create a freq dictionary\\n    O(n) spent to traverse the list, using the numbers as keys and the freq of that num as the value. return the values as a list\\n    O(nlogn) to sort the list values of dictionary in descending order\\n    O(k) return the first k values of this list\\n\\nANALYSIS\\n    as mentioned above, our runtime is going to be worst case in the class of O(nlogn)\\n    at worst case, we spend O(n) space for the dictionary, and another O(n) for the sorted list (aka every value is unique), and thus, O(2n) is in the class of O(n)\\n'"
+       "'\\nCONCEPT\\n    the brute force solution would be the most direct way to do this:\\n    count the freq of every number in the list, then sort those numbers by their freq, and then return the top k values\\n\\nIMPLEMENTATION\\n    create a freq dictionary\\n    O(n) spent to traverse the list, using the numbers as keys and the freq of that num as the value. return the values as a list\\n    O(nlogn) to sort the list values of dictionary in descending order\\n    O(k) return the first k values of this list\\n\\nANALYSIS\\n    as mentioned above, our runtime is going to be nlogn+n+k, or worst case, in the class of O(nlogn)\\n    at worst case, we spend O(n) space for the dictionary, and another O(n) for the sorted list (aka every value is unique), and thus, O(2n) is in the class of O(n)\\n'"
       ]
      },
      "execution_count": 5,
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,15 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 1, 2, 2, 3]\n",
-      "[(1, 3), (2, 2), (3, 1)]\n"
+      "[1, 1, 1, 2, 2, 3]\n"
      ]
     },
     {
@@ -213,7 +212,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Faster Solution Time = O(nlogn) | Space = O(n)"
+    "### Faster Solution Time = O(klogn) | Space = O(n)"
    ]
   },
   {
@@ -238,7 +237,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nCONCEPT \\n\\nIMPLEMENTATION\\n\\nMEMORY\\n\\n\\n'"
+       "'\\nCONCEPT \\n    we can further improve upon the runtime because we dont need to sort the entire array (rather, only need to return the first k sorted elements, not all sorted elements).\\n    we thus want to think of a way to manipulate the values in such a way that only requires us to work with the first k elements, reducing our total sample space.\\n\\nIMPLEMENTATION\\n    one way we can do this is with a transofmration.\\n    similarly like the above, O(n) to grab the freq of all the occurences\\n    then, heapify that into a max heap in O(n) time, using the freq as the key by which we heapify\\n    with our max heap established, we can then pop the first k elements to get the largest k. each pop worst case will be logn  \\n\\nMEMORY\\n    thus, our total runtime is O(n) + O(n) + k * O(logn), which simplifies to O(klogn). this would be faster than our original solution as long as k < n\\n    our memory would be O(n) for the size of the max heap\\n'"
       ]
      },
      "execution_count": 8,
@@ -249,42 +248,19 @@
    "source": [
     "'''\n",
     "CONCEPT \n",
+    "    we can further improve upon the runtime because we dont need to sort the entire array (rather, only need to return the first k sorted elements, not all sorted elements).\n",
+    "    we thus want to think of a way to manipulate the values in such a way that only requires us to work with the first k elements, reducing our total sample space.\n",
     "\n",
     "IMPLEMENTATION\n",
+    "    one way we can do this is with a transofmration.\n",
+    "    similarly like the above, O(n) to grab the freq of all the occurences\n",
+    "    then, heapify that into a max heap in O(n) time, using the freq as the key by which we heapify\n",
+    "    with our max heap established, we can then pop the first k elements to get the largest k. each pop worst case will be logn  \n",
     "\n",
     "MEMORY\n",
-    "\n",
-    "\n",
+    "    thus, our total runtime is O(n) + O(n) + k * O(logn), which simplifies to O(klogn). this would be faster than our original solution as long as k < n\n",
+    "    our memory would be O(n) for the size of the max heap\n",
     "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def twoSum(nums, target):\n",
-    "    sorted_nums = sorted(nums)\n",
-    "    i, j = 0, len(sorted_nums) - 1\n",
-    "    while i != j:\n",
-    "        curr_sum = sorted_nums[i] + sorted_nums[j]\n",
-    "        if curr_sum > target:\n",
-    "            j -= 1\n",
-    "        elif curr_sum < target:\n",
-    "            i += 1\n",
-    "        else: #sum is the target\n",
-    "            a, b = nums.index(sorted_nums[i]), nums.index(sorted_nums[j])\n",
-    "            if a != b: #index method won't return the same index\n",
-    "                return [a, b]\n",
-    "            else:\n",
-    "                kth_occurence = 0\n",
-    "                for index, element in enumerate(nums):\n",
-    "                    if element == sorted_nums[j]:\n",
-    "                        kth_occurence += 1\n",
-    "                        if kth_occurence == 2:\n",
-    "                            return[a, index]\n",
-    "    return False"
    ]
   },
   {
@@ -296,48 +272,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\nwe can actually skip the cost of sorting entirely by transofrming the list into a dictionary, which will help us locate our required values faster.\\n\\ntransforimg will cost O(n) time worst case, as we're iterating through nums to do our check.\\n\\nas we iterate through, on every int, we can take target - curr_int to calculate the required complement to our curr_int to make up target.\\n\\nif this complement exists in our dictionary, we can spend O(1) to instantly return that value's index and our current index. otherwise, store the curr_int and its index position into the dictionary.\\n\\nthe memory of this would be O(n), since we are creating a dictionary. \\n\""
+       "'\\nCONCEPT \\n    currently, the greatest timesink is klogn, which is involved in the lookup time from a heap\\n    we can improve on this time with an O(n) lookup time in either a dictionary or in a list from lowest to highest k already\\n    observe how in our previous iteration, we have already have a freq list (aka a list where the index is the chr and the value is the freq)\\n    by transforming this list into a new one in which the index is the freq and the values are lists of all the chrs of that freq, we can create a list that is ordered\\n    from lowest to highest k already. \\n\\nIMPLEMENTATION\\n    quick note: it sounds like we\\'re sorting the freq list by its values, which should take nlogn at the fastest.\\n    the key to realize here is that in any given list, the range of all the possible freq\\'s of every chr is going to be from 1 to n.\\n    eg) [1,2,2,4]\\n    the highest freq possible is going to be 4 (in the case where its [1,1,1,1]) and the lowest is going ot be 1 (in the case where its [1,2,3,4])\\n    the range of the freq is directly linearly proportional to the length of the list, meaning we can transform our freq list in O(n) by itearting through ti and placing it\\n    in a predefined index\\n\\n    in implementation, we transform our given list into a freq dictionary, where (key, value) = (chr, freq)\\n    next, we can transform this freq dictionary into a \"sorted k list\", where the max length of this \"sorted k list\" is deterministically the length of our given list.\\n    \"sorted k list\" is where the (index, value) = (freq, sub list of all chrs that have this freq). \\n\\n    because the index is our k in order, we start counting from the back of this \"sorted k list\" to get the top k elements\\n\\nMEMORY\\n    freq dictionary = O(n), \"sorted k list\" = O(n), lookup = O(n) = 3n = O(n)\\n    memory would be 2*O(n) for the freq dictionary and \"sorted k list\", which = O(n)\\n'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "'''\n",
-    "we can actually skip the cost of sorting entirely by transofrming the list into a dictionary, which will help us locate our required values faster.\n",
+    "CONCEPT \n",
+    "    currently, the greatest timesink is klogn, which is involved in the lookup time from a heap\n",
+    "    we can improve on this time with an O(n) lookup time in either a dictionary or in a list from lowest to highest k already\n",
+    "    observe how in our previous iteration, we have already have a freq list (aka a list where the index is the chr and the value is the freq)\n",
+    "    by transforming this list into a new one in which the index is the freq and the values are lists of all the chrs of that freq, we can create a list that is ordered\n",
+    "    from lowest to highest k already. \n",
     "\n",
-    "transforimg will cost O(n) time worst case, as we're iterating through nums to do our check.\n",
+    "IMPLEMENTATION\n",
+    "    quick note: it sounds like we're sorting the freq list by its values, which should take nlogn at the fastest.\n",
+    "    the key to realize here is that in any given list, the range of all the possible freq's of every chr is going to be from 1 to n.\n",
+    "    eg) [1,2,2,4]\n",
+    "    the highest freq possible is going to be 4 (in the case where its [1,1,1,1]) and the lowest is going ot be 1 (in the case where its [1,2,3,4])\n",
+    "    the range of the freq is directly linearly proportional to the length of the list, meaning we can transform our freq list in O(n) by itearting through ti and placing it\n",
+    "    in a predefined index\n",
     "\n",
-    "as we iterate through, on every int, we can take target - curr_int to calculate the required complement to our curr_int to make up target.\n",
+    "    in implementation, we transform our given list into a freq dictionary, where (key, value) = (chr, freq)\n",
+    "    next, we can transform this freq dictionary into a \"sorted k list\", where the max length of this \"sorted k list\" is deterministically the length of our given list.\n",
+    "    \"sorted k list\" is where the (index, value) = (freq, sub list of all chrs that have this freq). \n",
     "\n",
-    "if this complement exists in our dictionary, we can spend O(1) to instantly return that value's index and our current index. otherwise, store the curr_int and its index position into the dictionary.\n",
+    "    because the index is our k in order, we start counting from the back of this \"sorted k list\" to get the top k elements\n",
     "\n",
-    "the memory of this would be O(n), since we are creating a dictionary. \n",
+    "MEMORY\n",
+    "    freq dictionary = O(n), \"sorted k list\" = O(n), lookup = O(n) = 3n = O(n)\n",
+    "    memory would be 2*O(n) for the freq dictionary and \"sorted k list\", which = O(n)\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def twoSum2(nums, target):\n",
-    "    postition_dict = {}\n",
-    "    for i, e in enumerate(nums):\n",
-    "        if target - e in postition_dict.keys():\n",
-    "            return [postition_dict[target - e], i]\n",
+    "def topKFrequent(nums, k):\n",
+    "    freq_dict = {}\n",
+    "    for int in nums:\n",
+    "        if int in freq_dict.keys():\n",
+    "            freq_dict[int] += 1\n",
     "        else:\n",
-    "            postition_dict[e] = i\n",
-    "    return False"
+    "            freq_dict[int] = 1\n",
+    "    \n",
+    "    sorted_k_list = [[] for _ in range(len(nums) + 1)]\n",
+    "    for key, value in freq_dict.items():\n",
+    "        sorted_k_list[value].append(key)\n",
+    "    \n",
+    "    top_k = []\n",
+    "    for i in range(len(sorted_k_list)-1, 0, -1): #iterating starting from back of list\n",
+    "        for j in range(len(sorted_k_list[i])):\n",
+    "            top_k.append(sorted_k_list[i][j])\n",
+    "            if len(top_k) == k:\n",
+    "                return top_k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 2, 2, 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(nums1)\n",
+    "topKFrequent(nums1, k1)"
    ]
   },
   {
@@ -349,25 +378,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'target1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\CHRISM~1\\AppData\\Local\\Temp/ipykernel_5336/1768576696.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m print(f\"\\\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;33m{\u001b[0m\u001b[0mtwoSum2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnums1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m {twoSum2(nums2, target2)}\")\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'target1' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2][1]\n"
      ]
     }
    ],
    "source": [
     "print(f\"\\\n",
-    "{twoSum2(nums1, target1)}\\\n",
-    "{twoSum2(nums2, target2)}\")"
+    "{topKFrequent(nums1, k1)}\\\n",
+    "{topKFrequent(nums2, k2)}\")"
    ]
   },
   {
@@ -412,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4
  },
